# yorna

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  run-clang-format.bat
example-project/: projectName.cfpj
include/editor/: components.hpp  editor.hpp  entities.hpp  extensions.hpp  imgui.hpp  localization.hpp  timestamps.hpp  viewports.hpp
include/entities/: camera.hpp  light_objects.hpp  model.hpp  point_light.hpp  transform_component.hpp
include/systems/imgui/: entities.hpp  extensions.hpp  fira_code.hpp  localization.hpp  shaders.hpp  structures.hpp  system.hpp  viewports.hpp
include/systems/sandbox/: structures.hpp  system.hpp
include/systems/shadows/: sunlight_shadow.hpp
include/yorna/: early_depth.hpp  forward_plus.hpp  light_culling.hpp  shared_instance.hpp  skybox.hpp  sunlight_shadow.hpp  yorna.hpp
include/yorna/shadows/: sunlight_shadow.hpp
libs/: imgui-cmake.patch  imgui-config.patch
libs/imguifiledialog/: imgui_file_dialog.cpp  imgui_file_dialog.h  imgui_file_dialog_config.h  imgui_file_dialog_def.h
libs/imguizmo/: ImGuizmo.cpp  ImGuizmo.h
libs/nlohmann/: json.hpp
nativefs/: cube.cfa  white_skybox.basis
nativefs/shaders/: base.frag  base.frag.spv  calculate_frustums.comp  calculate_frustums.comp.spv  compile_shader.bat  compile_shader.sh  early_depth.frag  early_depth.frag.spv  early_depth.vert  early_depth.vert.spv  forward.frag  forward.frag.spv  forward.vert.spv  forward_plus.frag  forward_plus.frag.spv  forward_plus.vert  forward_plus.vert.spv  frustum.glsl  light_culling.comp  light_culling.comp.spv  light_objects.glsl  materials.glsl  mouse_picking.frag  mouse_picking.vert  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  shadow_mapping.vert  shadow_mapping.vert.spv  skybox.frag  skybox.vert
nativefs/sponza_scene/: 0.basis  1.basis  10.basis  11.basis  12.basis  13.basis  14.basis  15.basis  16.basis  17.basis  18.basis  19.basis  2.basis  20.basis  21.basis  22.basis  23.basis  24.basis  25.basis  26.basis  27.basis  28.basis  29.basis  3.basis  30.basis  31.basis  32.basis  33.basis  34.basis  35.basis  36.img  37.basis  38.basis  39.basis  4.basis  40.basis  41.basis  42.basis  43.basis  44.basis  (+26 more)
shaders/: base.frag  base.frag.spv  base.vert  base.vert.spv  compile_shaders.bat  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv
src/: main.cpp
src/editor/: components.cpp  editor.cpp  imgui.cpp  timestamps.cpp
src/entities/: camera.cpp  light_objects.cpp  model.cpp  point_light.cpp  transform_component.cpp
src/game_objects/: camera.cpp  camera.hpp  game_object.cpp  game_object.hpp  light_object.cpp  light_object.hpp  model.cpp  model.hpp  model_object.cpp  model_object.hpp
src/systems/: imgui_behaviour.cpp  imgui_behaviour.hpp  imgui_system.cpp  light_behaviour.cpp  light_behaviour.hpp  main_behaviour.cpp  main_behaviour.hpp  model.cpp  model.hpp  sandbox_system.cpp  structs.hpp
src/systems/shadows/: sunlight_shadow.cpp
src/yorna/: early_depth.cpp  forward_plus.cpp  light_culling.cpp  shared_instance.cpp  skybox.cpp  sunlight_shadow.cpp  yorna.cpp
src/yorna/shadows/: sunlight_shadow.cpp
