CMAKE_MINIMUM_REQUIRED(VERSION 3.11...3.25)

SET(PROJECT_NAME coffee-editor)
PROJECT(${PROJECT_NAME} CXX)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")

FILE(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp")

FILE(COPY_FILE "${CMAKE_CURRENT_SOURCE_DIR}/libs/imgui-cmake.patch" "${CMAKE_CURRENT_SOURCE_DIR}/libs/imgui/CMakeLists.txt")
EXECUTE_PROCESS(COMMAND cmd /C "cd ${CMAKE_CURRENT_SOURCE_DIR}/libs/imgui && git apply ../imgui-config.patch" OUTPUT_QUIET ERROR_QUIET)

ADD_SUBDIRECTORY(engine)
ADD_SUBDIRECTORY(libs/imgui)

FIND_PACKAGE(Vulkan)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/engine/include" "${CMAKE_CURRENT_SOURCE_DIR}/libs/imgui")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE Vulkan::Vulkan coffee-engine assimp fmt::fmt glfw glm::glm imgui)
SET_TARGET_PROPERTIES(${PROJECT_NAME} imgui PROPERTIES VS_GLOBAL_VcpkgEnabled FALSE)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
SET_PROPERTY(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" PROPERTY VS_STARTUP_PROJECT "${PROJECT_NAME}")

ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/shaders/compile_shaders.bat "${CMAKE_CURRENT_SOURCE_DIR}/shaders")
FILE(GLOB_RECURSE SHADERS_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/shaders/*.vert" "${CMAKE_CURRENT_SOURCE_DIR}/shaders/*.frag")
LIST(APPEND SOURCES ${SHADERS_SOURCES})

FOREACH(SOURCE IN ITEMS ${SOURCES})
	GET_FILENAME_COMPONENT(SOURCE_PATH "${SOURCE}" PATH)
	STRING(REPLACE "${CMAKE_SOURCE_DIR}" "" GROUP_PATH "${SOURCE_PATH}")
	STRING(REPLACE "/" "\\" GROUP_PATH "${GROUP_PATH}")
	SOURCE_GROUP("${GROUP_PATH}" FILES "${SOURCE}")
ENDFOREACH()